--- a/Submit Assienment/Sanket_Jadhav-17/css/style.css
+++ b/Submit Assienment/Sanket_Jadhav-17/css/style.css
@@ -3,15 +3,6 @@
     src: url('../fonts/PlaywriteRO-variableFont_wght.ttf');
   }
 
-/* Body and background settings */
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-} */
 
 /* Wrapper for the invitation card */
 .invitation-wrapper {
@@ -23,19 +14,10 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Background decorations 
-.yellow-dash {
-    position: absolute;
-    top: 260mm;
-    left: 97mm;
-    background: #bd952382;
-    height: 2mm;
-    width: 47mm;
-}*/
 
 .rcorners{
     border-radius: 0mm;
-    border: 5px solid #dad3d3;
+    border: 3.75ptsolid #dad3d3;
     padding: 1mm;
     width: 172mm;
     margin-left: 17mm;
@@ -77,8 +59,8 @@
 }
 
 .top-left-blue {
-    width: 1443px;
-    height: 50px;
+    width: 381.793mm;
+    height: 13.229mm;
     background: rgb(188, 188, 224);
     transform: rotate(90deg);
     position: absolute;
@@ -88,8 +70,8 @@
 }
 
 .top-right-yellow {
-    width: 1443px;
-    height: 50px;
+    width: 381.793mm;
+    height: 13.229mm;
     background: rgb(188, 188, 224);
     transform: rotate(0deg);
     position: absolute;
@@ -98,8 +80,8 @@
 }
 
 .bottom-left-yellow {
-    width: 1443px;
-    height: 50px;
+    width: 381.793mm;
+    height:13.229mm;
     background: rgb(188, 188, 224);
     transform: rotate(0deg);
     position: absolute;
@@ -108,8 +90,8 @@
 }
 
 .middle-light-blue {
-    width: 1443px;
-    height: 50px;
+    width: 381.793mm;
+    height: 13.229mm;
     background: rgb(188, 188, 224);
     transform: rotate(90deg);
     position: absolute;
@@ -117,21 +99,21 @@
     left: 13mm;
 }
 
-/* Invitation content styling */
+
 .invitation-content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
-    padding: 20px;
+    padding: 15pt;
     text-align: center;
 }
 
 .invitation-header {
     font-size: 2.5rem;
     color: #27115d;
-    margin-bottom: 23px;
+    margin-bottom: 6.085mm;
     position: absolute;
     top: -89mm;
     left: 38mm;
@@ -139,7 +121,7 @@
 .event-name {
     font-size: 4rem;
     color: #27115d;
-    margin-bottom: 10px;
+    margin-bottom: 2.645mm;
     position: absolute;
     top: -49mm;
     left: 19mm;
@@ -175,86 +157,86 @@
 .salutation {
     font-size: 2.5rem;
     color: #27115d;
-    margin-bottom: 10px;
+    margin-bottom: 2.645mm;
     position: absolute;
     top: -121mm;
     left: 37mm;
 }
 
 .tagline {
-    font-size: 1.8rem;
+    font-size: 21.6pt;
     color: #27115d;
-    margin-bottom: 20px;
+    margin-bottom: 5.291mm;
     position: absolute;
     top: -108mm;
     left: 32mm;
 }
 
 .event-subheading {
-    font-size: 7mm;
+    font-size: 19.842pt;
     color: #27115d;
-    margin-bottom: 10px;
+    margin-bottom: 2.645mm;
     position: absolute;
     top: -29mm;
     left: 26mm;
 }
 .event-pre-description {
-    font-size: 1.8rem;
+    font-size: 21.6pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 50mm;
     left: 3mm;
 }
 
 .event-description {
-    font-size: 1.8rem;
+    font-size: 21.6pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 53mm;
     left: 1mm;
 }
 
 .event-organizer {
-    font-size: 1.5rem;
+    font-size: 18pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 89mm;
     left: 51mm;
 }
 
 .event-other-organizers {
-    font-size: 1.8rem;
+    font-size: 21.6pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 99mm;
     left: 23mm;
 }
 
 .event-organizers-contact-person {
-    font-size: 1.5rem;
+    font-size: 18pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 113mm;
     left: 55mm;
 }
 
 .event-organizers-contact-number {
-    font-size: 1.5rem;
+    font-size: 18pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 121mm;
     left: 45mm;
 }
 .event-participant-1 {
-    font-size: 5rem;
+    font-size: 60pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: -12mm;
     left: 111mm;
@@ -264,16 +246,16 @@
 .event-participant-1-details {
     font-size: 8mm;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: 8mm;
     left: 109mm;
 }
 
 .event-participant-2 {
-    font-size: 5rem;
+    font-size: 60pt;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom:  1.322mm;
     position: absolute;
     top: -15mm;
     left: 19mm;
@@ -282,7 +264,7 @@
 .event-participant-2-details {
     font-size: 8mm;
     color: #27115d;
-    margin-bottom: 5px;
+    margin-bottom: 1.322mm;
     position: absolute;
     top: 9mm;
     left: 27mm;
