folder name change

--- a/Submit Assienment/Sanket_Jadhav-17/css/style.css
+++ b/Submit Assienment/Sanket_Jadhav-17/css/style.css
@@ -16,7 +16,7 @@
 
 
 .rcorners{
-    border-radius: 0mm;
+    border-radius: 0pt;
     border: 3.75ptsolid #dad3d3;
     padding: 1mm;
     width: 172mm;
@@ -111,7 +111,7 @@
 }
 
 .invitation-header {
-    font-size: 2.5rem;
+    font-size: 30pt;
     color: #27115d;
     margin-bottom: 6.085mm;
     position: absolute;
@@ -119,7 +119,7 @@
     left: 38mm;
 }
 .event-name {
-    font-size: 4rem;
+    font-size: 48pt;
     color: #27115d;
     margin-bottom: 2.645mm;
     position: absolute;
@@ -128,7 +128,7 @@
     font-family:sub;
 }
 .date {
-    font-size: 8mm;
+    font-size: 22.677pt;
     color: #27115d;
     position: absolute;
     top: 23mm;
@@ -136,7 +136,7 @@
     font-weight: bold;
 }
 .time {
-    font-size: 8mm;
+    font-size: 22.677pt;
     color: #27115d;
     position: absolute;
     top: 24mm;
@@ -145,7 +145,7 @@
 }
 
 .location {
-    font-size: 8mm;
+    font-size: 22.677pt;
     color: #27115d;
     position: absolute;
     top: 36mm;
@@ -155,7 +155,7 @@
 
 /* Additional content styling */
 .salutation {
-    font-size: 2.5rem;
+    font-size: 30pt;
     color: #27115d;
     margin-bottom: 2.645mm;
     position: absolute;
@@ -244,7 +244,7 @@
 }
 
 .event-participant-1-details {
-    font-size: 8mm;
+    font-size: 22.677pt;
     color: #27115d;
     margin-bottom:  1.322mm;
     position: absolute;
@@ -262,7 +262,7 @@
     font-weight: bold;
 }
 .event-participant-2-details {
-    font-size: 8mm;
+    font-size: 22.677pt;
     color: #27115d;
     margin-bottom: 1.322mm;
     position: absolute;
