--- a/Submit Assienment/Sanket_Jadhav-18/css/style.css
+++ b/Submit Assienment/Sanket_Jadhav-18/css/style.css
@@ -147,7 +147,7 @@
     position: absolute;
     top: -248mm;
     left: -104mm;
-    border-radius: 89mm;
+    border-radius: 252.283pt;
 }
 
 .top-right-yellow {
@@ -158,7 +158,7 @@
     position: absolute;
     top: 278mm;
     left: -95mm;
-    border-radius: 80mm;
+    border-radius: 226.771pt;
 }
 
 .bottom-left-yellow {
@@ -169,7 +169,7 @@
     position: absolute;
     top: 282mm;
     left: -95mm;
-    border-radius: 80mm;
+    border-radius: 226.771pt;
     
 }
 
@@ -181,7 +181,7 @@
     position: absolute;
     top: 259mm;
     left: -95mm;
-    border-radius: 80mm;
+    border-radius: 226.771pt;
 }
 
 /* Invitation content styling */
@@ -196,7 +196,7 @@
 }
 
 .recrners{
-    border-radius: 0mm;
+    border-radius: 0pt;
     border: 3.75pt solid #939191;
     padding: 1mm;
     width: 189mm;
@@ -223,7 +223,7 @@
     font-family:sub;
 }
 .date {
-    font-size: 6mm;
+    font-size: 17.007pt;
     color: #27115d;
     position: absolute;
     top: -3mm;
@@ -232,7 +232,7 @@
     transform: rotate(1deg);
 }
 .time {
-    font-size: 6mm;
+    font-size: 17.007pt;
     color: #27115d;
     position: absolute;
     top: 5mm;
@@ -241,7 +241,7 @@
 }
 
 .location {
-    font-size: 6mm;
+    font-size:17.007pt;
     color: #27115d;
     position: absolute;
     top: -4mm;
@@ -313,7 +313,7 @@
 }
 
 .event-organizers-contact-person {
-    font-size: 7mm;
+    font-size: 19.842pt;
     color: #27115d;
     margin-bottom: 1.322mm;
     position: absolute;
@@ -322,7 +322,7 @@
 }
 
 .event-organizers-contact-number {
-    font-size: 7mm;
+    font-size: 19.842pt;
     color: #27115d;
     margin-bottom: 1.322mm;
     position: absolute;
